# MySimpleRaytracer

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Raytracer.cpp  Raytracer.h  camera.h  colour.h  constants.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  vec3.h
